feat(security): Implement IT security management recommendations for Sama Naffa platform
- Added comprehensive security measures including strong password enforcement, two-factor authentication, account lockout policies, and session management.
- Enhanced backend and database security with data encryption, password hashing, and access restrictions.
- Improved API security through rate limiting, input validation, and request authentication.
- Strengthened frontend security by enforcing HTTPS, updating dependencies, and protecting against XSS/CSRF attacks.
- Established admin access controls, logging, and role management for better oversight.
- Upgraded system and network infrastructure with WAF deployment, log monitoring, and regular updates.
- Ensured compliance with data protection regulations (CDP and GDPR) and implemented data retention policies.
- Set up continuous monitoring and vulnerability scanning for proactive security management.

feat(database): Add failedAttempts and lockedUntil columns to users table

- Created a migration script to alter the users table by adding `failedAttempts` and `lockedUntil` columns for enhanced account security.

feat(api): Implement user suspension and activation endpoints

- Developed API routes for admin to suspend or activate users, including validation and logging of actions.

feat(api): Add CSRF token generation and validation

- Created endpoints for generating and validating CSRF tokens to enhance security against cross-site request forgery.

feat(hooks): Implement session timeout management

- Developed a custom hook to manage user session timeouts, including warning notifications and automatic sign-out.

feat(audit): Introduce audit logging for admin actions

- Implemented an audit logging system to track admin actions, including user suspensions, activations, and KYC approvals.

feat(csrf): Enhance CSRF protection mechanisms

- Added functions for generating, verifying, and invalidating CSRF tokens, along with middle

--- a/env.example
+++ b/env.example
@@ -46,6 +46,23 @@ ADMIN_RATE_LIMIT_MAX_ATTEMPTS="5"
 ADMIN_RATE_LIMIT_WINDOW_MS="900000"
 ADMIN_RATE_LIMIT_BLOCK_MS="3600000"
 
+# User Rate Limiting
+LOGIN_RATE_LIMIT_MAX_ATTEMPTS="5"
+LOGIN_RATE_LIMIT_WINDOW_MS="900000"
+LOGIN_RATE_LIMIT_BLOCK_MS="1800000"
+
+OTP_RATE_LIMIT_MAX_ATTEMPTS="3"
+OTP_RATE_LIMIT_WINDOW_MS="3600000"
+OTP_RATE_LIMIT_BLOCK_MS="3600000"
+
+TRANSACTION_RATE_LIMIT_MAX_ATTEMPTS="10"
+TRANSACTION_RATE_LIMIT_WINDOW_MS="60000"
+TRANSACTION_RATE_LIMIT_BLOCK_MS="300000"
+
+KYC_RATE_LIMIT_MAX_ATTEMPTS="5"
+KYC_RATE_LIMIT_WINDOW_MS="3600000"
+KYC_RATE_LIMIT_BLOCK_MS="3600000"
+
 # Intouch Payment Provider
 # Environment: 'test' or 'production' (defaults to production if not set, or 'test' if NODE_ENV=development)
 # INTOUCH_ENVIRONMENT="test"
